# bokbokbok

./: .gitignore  .gitlab-ci.yml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: publish_documentation.yml  publish_pypi.yml  unit_tests.yml
bokbokbok/eval_metrics/classification/: __init__.py  binary_eval_metrics.py  classification_eval_metrics.py  multiclass_eval_metrics.py
bokbokbok/eval_metrics/regression/: __init__.py  regression_eval_metrics.py
bokbokbok/utils/: __init__.py  functions.py
derivations/: focal.html  log_cosh.html  note.html  sle.html  wce.html
docs/: index.md
docs/derivations/: focal.md  log_cosh.md  note.md  sle.md  wce.md
docs/getting_started/: install.md
docs/reference/: eval_metrics_binary.md  eval_metrics_classification.md  eval_metrics_multiclass.md  eval_metrics_regression.md  loss_functions_classification.md  loss_functions_regression.md
docs/tutorials/: F1_score.ipynb  RMSPE.ipynb  focal_loss.ipynb  log_cosh_loss.ipynb  quadratic_weighted_kappa.ipynb  weighted_cross_entropy.ipynb
getting_started/: install.html
reference/: eval_metrics_binary.html  eval_metrics_classification.html  eval_metrics_multiclass.html  eval_metrics_regression.html  loss_functions_classification.html  loss_functions_regression.html
search/: search_index.json
tests/: test_focal.py  test_utils.py  test_wce.py
tutorials/: F1_score.html  RMSPE.html  focal_loss.html  log_cosh_loss.html  quadratic_weighted_kappa.html  weighted_cross_entropy.html
(+4 files in other folders)
