[project]
name = "bokbokbok"
version = "1.0.0"
description = "Custom Losses and Metrics for XGBoost, LightGBM"
authors = [
    {name = "Daniel Timbrell",email = "dantimbrell@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]

[project.urls]
homepage = "https://github.com/orchardbirds/bokbokbok"
documentation = "https://orchardbirds.github.io/bokbokbok/"

[tool.poetry]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
lightgbm = "^4.6.0"
xgboost = "^3.0.0"
ruff = "^0.11.4"
mkdocs-material = "^9.6.11"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
mkdocs-git-authors-plugin = "^0.9.4"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-enumerate-headings-plugin = "^0.6.2"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-minify-plugin = "^0.8.0"
mknotebooks = "^0.8.0"
mkdocstrings = "^0.29.1"
mkdocs-print-site-plugin = "^2.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"